added the light/dark button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 <body>
   <main>
     <section class="wrapper">
-
+      <header>
+        <h1>Todo</h1>
+        <button class="btn theme-btn light"><img src="images/icon-moon.svg" alt="moon svg"></button>
+      </header>
     </section>
   </main>
 
